# sgrequests-cache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: patterns.md  performance.md  production.md  statistics.md
sgrequests_cache/: __init__.py  cache.py  circuit_breaker.py  deduplication.py  invalidation.py  metrics.py  patterns.py  serializers.py  stats.py
sgrequests_cache/backends/: __init__.py  base.py  memory.py  redis.py  tiered.py
tests/: test_advanced_features.py  test_cache.py
