[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sgrequests-cache"
version = "2.0.0"
description = "High-performance caching layer for SgRequests with advanced features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sergei Lutchenko", email = "lutchenko@me.com"}
]
keywords = ["cache", "scraping", "sgrequests", "redis", "performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.24,<0.25",
    "msgpack>=1.0,<2",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
compression = [
    "lz4",
    "zstandard",
]
metrics = [
    "prometheus-client",
]

[project.urls]
Homepage = "https://github.com/datarhan/sgrequests-cache"
Documentation = "https://github.com/datarhan/sgrequests-cache#readme"
Repository = "https://github.com/datarhan/sgrequests-cache"
Issues = "https://github.com/datarhan/sgrequests-cache/issues"

[tool.setuptools]
packages = ["sgrequests_cache", "sgrequests_cache.backends"]

[tool.setuptools.package-data]
sgrequests_cache = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sgrequests_cache --cov-report=term-missing"
